--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,25 @@
-.App {
+
+@import url('https://fonts.googleapis.com/css?family=Questrial&display=swap');
+* {
+  font-size: 10px;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: Questrial;
+}
+
+table {
+  width: 100%;
+  max-width: 450px;
+  margin: 0 auto;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+th {
+  padding: 10px;
+  border-bottom: 1px solid #000;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+td {
+  border-bottom: 1px solid #000;
 }
